# rust-in-motion

./: Cargo.toml  README.md
src/: chap-1-exercise.rs  chap-1.rs
src/borrower/: at-the-same-time.rs  borrower-1.rs  entry-api.rs  mutable-borrowing.rs  new-scope.rs  struct-splitting-prob.rs  struct-splitting-sol.rs  temp-variable.rs
src/error-handling/: ?.rs  Box-Error.rs  Result to Option.rs  custom_error.rs  error-chain.rs  failure.rs  option.rs  panic-1.rs  quick-error-context.rs  quick-error.rs  result-json-parsing.rs  unreachable.rs  unwrap_or.rs
src/lifetimes/: borrow-checker-lifetimes.rs
