[package]
name = "myproj"
version = "0.1.0"
authors = ["Chinmay <craval@ripple.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0.78"
serde_json = "^1.0.27"
serde_derive = "^1.0.78"
quick-error = "=1.2.2"
error-chain = "=0.12.0"
backtrace = "=0.3.18"
failure = "=0.1.5"
failure_derive = "=0.1.5"
